src/objects/AMS_Owner__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_synchronization__c</fullName>
        <label>Last synchronization</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_System__c</fullName>
        <label>Legacy System</label>
        <picklist>
            <picklistValues>
                <fullName>AIMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webstar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>AMS_Person__c</referenceTo>
        <relationshipLabel>Owners (AMS)</relationshipLabel>
        <relationshipName>Owners_AMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Owner (AMS)</label>
    <nameField>
        <label>Owner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Owners (AMS)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>